# hdf5-rust-as-hdf5x

./: .gitmodules  CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
examples/: chunking.rs  simple.rs
hdf5-sys/: Cargo.toml  build.rs
hdf5x-derive/: Cargo.toml
hdf5x-derive/src/: lib.rs
hdf5x-derive/tests/: test.rs
hdf5x-derive/tests/compile-fail/: empty-enum.rs  empty-struct.rs  empty-tuple-struct.rs  enum-no-repr.rs  enum-non-scalar.rs  pd-empty-struct.rs  pd-empty-tuple-struct.rs  struct-c-repr.rs  tuple-struct-c-repr.rs  unit-struct.rs
hdf5x-src/: Cargo.toml  build.rs
hdf5x-sys/: Cargo.toml  README.md  build.rs
hdf5x-sys/src/: h5ac.rs  h5d.rs  h5f.rs  h5l.rs  h5o.rs  h5p.rs  h5pl.rs  lib.rs
hdf5x-types/: Cargo.toml
hdf5x-types/src/: lib.rs
src/: error.rs  globals.rs  handle.rs  lib.rs  macros.rs  sync.rs  util.rs
src/hl/: attribute.rs  container.rs  dataset.rs  dataspace.rs  datatype.rs  extents.rs  file.rs  filters.rs  group.rs  location.rs  object.rs  plist.rs  selection.rs  space.rs
src/hl/filters/: blosc.rs  lzf.rs
src/hl/plist/: common.rs  dataset_access.rs  dataset_create.rs  file_access.rs  file_create.rs  link_create.rs
tests/: test_dataset.rs  test_datatypes.rs  test_plist.rs  tests.rs
tests/common/: gen.rs  util.rs
