[package]
name = "hdf5x-sys"
version = "0.8.0"  # !V
authors = ["Ivan Smirnov <i.s.smirnov@gmail.com>"]
keywords = ["hdf5x"]
license = "MIT OR Apache-2.0"
build = "build.rs"
repository = "https://github.com/aldanor/hdf5x-rust"
homepage = "https://github.com/aldanor/hdf5x-rust"
description = "Native bindings to the HDF5 library."
edition = "2018"
links = "hdf5x"
readme = "README.md"

[dependencies]
libc = "0.2"
mpi-sys = { version = "0.1", optional = true }
libz-sys = { version = "1.0.25", optional = true, default-features = false }
hdf5x-src = { path = "../hdf5x-src", version = "0.8.0", optional = true }  # !V

# Please see README for further explanation of these feature flags
[features]
default = []
mpio = ["mpi-sys"]
hl = ["hdf5x-src/hl"]
threadsafe = ["hdf5x-src/threadsafe"]
zlib = ["libz-sys", "hdf5x-src/zlib"]
static = ["hdf5x-src"]
deprecated = ["hdf5x-src/deprecated"]
conda = ["attohttpc", "sha2", "bzip2", "tar"]

[build-dependencies]
libloading = "0.7"
regex = { version = "1.3", features = ["std"] }
sha2 = { version = ">=0.9, <0.11", optional = true }
attohttpc = { version = ">=0.12, <0.19", default-features = false, features = ["compress", "tls-rustls"], optional = true }
bzip2 = { version = ">=0.3.3, <0.5", optional = true }
tar = { version = "*", optional = true }


[target.'cfg(all(unix, not(target_os = "macos")))'.build-dependencies]
pkg-config = "0.3"

[target.'cfg(windows)'.build-dependencies]
serde = "1.0"
serde_derive = "1.0"
winreg = { version = "0.10", features = ["serialization-serde"]}

[package.metadata.docs.rs]
features = ["static", "zlib"]
